# copy-onboard

./: LICENSE  Makefile  README.md  pyproject.toml
configs/: configs.yaml  features.yaml  local.yaml  numeric.yaml  preprocess.yaml
mlpipeline/: __main__.py  cleaning.py  feature_manager.py  pipeline.py  preprocess.py
mlpipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlpipeline/utils/: config.py  factory.py  logger.py  singleton.py
report/step_n/: step_n.ipynb
tests/: test_feature_manager.py  test_mlpipeline.py  test_preprocess.py
tests/data/: bank_churners.csv  test.csv
